--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="PsyAgenda">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://brucardosocoder.github.io/PsyAgenda/PsyAgenda.png">
+    <meta property="og:url" content="https://brucardosocoder.github.io/PsyAgenda/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" itemprop="image" content="https://brucardosocoder.github.io/PsyAgenda/PsyAgenda.png">
     <title>PsyAgenda - Agenda para Psicólogos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
