--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta property="og:title" content="PsyAgenda">
     <meta property="og:description" content="">
     <meta property="og:image" content="https://brucardosocoder.github.io/PsyAgenda/PsyAgenda.png">
+    <meta property="og:image:width" content="720">
+    <meta property="og:image:height" content="1280">
     <meta property="og:url" content="https://brucardosocoder.github.io/PsyAgenda/">
     <meta property="og:type" content="website">
     <meta property="og:image" itemprop="image" content="https://brucardosocoder.github.io/PsyAgenda/PsyAgenda.png">
