--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:url" content="https://brucardosocoder.github.io/psyagenda/">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="PsyAgenda">
     <meta property="og:description" content="">
     <meta property="og:image" content="https://brucardosocoder.github.io/PsyAgenda/PsyAgenda.png">
-    <meta property="og:image:width" content="720">
-    <meta property="og:image:height" content="1280">
-    <meta property="og:url" content="https://brucardosocoder.github.io/PsyAgenda/">
-    <meta property="og:type" content="website">
-    <meta property="og:image" itemprop="image" content="https://brucardosocoder.github.io/PsyAgenda/PsyAgenda.png">
+    <meta property="og:image:width" content="139">
+    <meta property="og:image:height" content="247">    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="brucardosocoder.github.io">
+    <meta property="twitter:url" content="https://brucardosocoder.github.io/psyagenda/">
+    <meta name="twitter:title" content="PsyAgenda">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="https://brucardosocoder.github.io/PsyAgenda/PsyAgenda.png">
     <title>PsyAgenda - Agenda para Psicólogos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
